0.83.13
  - DOSBox-X will now show the folder mounted after
    mounting to a drive from the menu. (Wengier)
  - Fixed MOUNT and IMGMOUNT commands unable to mount
    directories or image files that contain non-ASCII
    characters in the code page on Windows. (Wengier)
  - Fixed that some games using the DOS4GW Extender
    may not work due to swap file issue. (Wengier)
  - Fixed that the clipboard copy and paste may not
    work when the current code page is 808 or 872
    and you are using Windows. (Wengier)
  - The command "MIXER /LISTMIDI" now lists the ROM
    directory/files and sound fonts for MT32, Synth
    and FluidSynth MIDI device when active. (Wengier)
  - Debugger "DOS XMS" command will only list handles
    that are allocated, or with nonzero address or
    nonzero size, to avoid showing irrelevant
    information. (joncampbell123)
  - Added LOADFIX -EMS option to allocate/free
    EMS (expanded memory). (joncampbell123)
  - LOADFIX -D -XMS will free all XMS blocks
    allocated by LOADFIX -XMS. (joncampbell123)
  - LOADFIX -A will not allocate memory unless there
    is memory below 64KB to fill. (joncampbell123)
  - INT 15h PS/2 mouse functions now clear pending
    PS/2 mouse interrupt as part of the BIOS call.
    This should resolve unresponsive mouse issues
    with Windows 3.1. (joncampbell123)
  - Updated FLAC decoder library to the latest version
    (0.12.29 by David Reid). (Wengier)
0.83.12
  - Tandy graphics emulation fixed to accept 8 bits
    for vertical total and vertical display CRTC
    registers, which is needed for the tweaked
    graphics mode used by Math Rabbit to display
    correctly.
  - INT 10h will no longer fill in three fields in
    the BIOS data area (video CTL, char height, and
    video switches) unless the machine type is
    EGA or VGA. Those fields do not exist otherwise.
    Certain games like Mindscape's "Road Runner" game
    require those fields to be zero as part of it's
    Tandy detection routine.